--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,14 @@ dist
 
 # TernJS port file
 .tern-port
+
+.DS_Store
+
+package-lock.json
+# pnpm-lock.yaml
+yarn.lock
+
+/types
+/index.mjs
+/index.cjs
+/index.js
